# atl-agd

./: README.md
desktop/windows/: CMakeLists.txt  build.cmd
desktop/windows/src/: agd.cpp  agd.rc  pch.cpp  pch.hpp
